--- a/11R/index.html
+++ b/11R/index.html
@@ -13,7 +13,8 @@
             <input type="email" name="mail" id="mail"><br><br>
             <label for="pswd">Enter Password :</label>
             <input type="password" name="pswd" id="pswd"><br><br>
-            <input type="submit" value="Login">
+            <input type="submit" value="Login"> <br><br> Create a New Account
+            <input type="submit" value="Signup"> <br><br>
             <input type="submit" formaction="./forgotten.html" value="Forgotten Password"><br><br>
             <input type="submit" formaction="./homepage.html" value="Homepage">
         </form>
