--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <label for="pswd">Enter Password :</label>
             <input type="password" name="pswd" id="pswd"><br><br>
             <input type="submit" value="Login"> <br><br> Create a New Account
-            <input type="submit" value="Signup"> <br><br>
+            <input type="submit" value="Signup" formaction="./signup.html"> <br><br>
             <input type="submit" formaction="./forgotten.html" value="Forgotten Password"><br><br>
             <input type="submit" formaction="./homepage.html" value="Homepage">
         </form>
