--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
             <label for="Cpswd">Confirm password :</label>
             <input type="password" name="Cpswd" id="cpswd"><br><br>
             <input type="submit" value="Signup">
-             <input type="submit" formaction="./login.html" value="Login">
+             <input type="submit" formaction="./index.html" value="Login">
              
 
 
