--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,7 @@
             <input type="password" name="pswd" id="pswd"><br><br>
             <label for="Cpswd">Confirm password :</label>
             <input type="password" name="Cpswd" id="cpswd"><br><br>
-            <input type="submit" value="Signup">
+            <input type="submit" value="Signup"><br><br>Already have an Account :
              <input type="submit" formaction="./index.html" value="Login">
              
 
